--- a/web/public/css/main.css
+++ b/web/public/css/main.css
@@ -11,6 +11,12 @@
     justify-content: space-between;
     align-items: center;
 }
+.message-body {
+    display: flex;
+    align-items: center;
+    width: 80%;
+    height: 100%;
+}
 .message-container>button {
     width: 2%;
     height: 70%;
